# sigaa-scheduler

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
docs/: index.html
src/: lib.rs  main.rs
src/schedule/: mod.rs  schedule.rs  schedule_unity.rs
src/schedule/class/: auxiliary.rs  implementation.rs  mod.rs
src/schedule/sigaa_time_format/: sigaa_time.rs
src/view/atoms/: discipline.rs  schedule_unity.rs
src/view/molecules/: app.rs  discipline_list.rs  schedule.rs
